--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -99,7 +99,7 @@ Vincent Vidal\\
 \maketitle
 \begin{abstract}
 After having instantiated the evolutionary metaheuristic \DAEX\ with the forward search \YAHSP\ planner, 
-we investigate on the global parallelism approach, which exploit the inherent parallelism of the individual evaluation.
+we investigate on the global parallelism approach, which exploits the inherent parallelism of the individual evaluation.
 This paper describes a parallel shared-memory release of the \DAEYAHSP\ planning system using the OpenMP directive-based API.
 The parallelization scheme applies at a high level abstraction and thus can be used by any evolutionary algorithm implemented with the Evolving Objects framework.
 The proof of concept is made on a 48-core machine with two planning tasks extracted from the last international planning competition.
