--- a/papers/GECCO2011/dae_mt/dae_mt.bib
+++ b/papers/GECCO2011/dae_mt/dae_mt.bib
@@ -59,7 +59,7 @@
 	JOURNAL = "Journal of Artificial Intelligence Research",
 	VOLUME = {39},
 	NUMBER = {},
-	PAGES = {689–743},
+	PAGES = {689-743},
 	YEAR = {2010}	}
 
 @INPROCEEDINGS{burns:icaps2009,
@@ -143,8 +143,8 @@
 
 @Article{	  ff:jair01,
   author	= {J. Hoffmann and B. Nebel},
-  title		= {The {FF} Planning System: {F}ast Plan Generation Through
-		  Heuristic Search},
+  title		= {{The {FF} Planning System: {F}ast Plan Generation Through
+		  Heuristic Search}},
   journal	= {Journal of Artificial Intelligence Research},
   year		= {2001},
   volume	= {14},
@@ -153,16 +153,16 @@
 
 @inproceedings{rintanen:acai2010,
   author    = {Jussi Rintanen},
-  title     = {Heuristic Planning with SAT: {B}eyond Uninformed Depth-First
-               Search},
-  booktitle = {Proc. of the 23rd Australasian Conference on Artificial Intelligence (ACAI-2010)},
+  title     = {{Heuristic Planning with SAT: {B}eyond Uninformed Depth-First
+               Search}},
+  booktitle = {$23^{rd}$ Australasian Conference on Artificial Intelligence (ACAI-2010)},
   year      = {2010},
   pages     = {415-424},
 }
 
 @Article{	  ipc4:jair05,
   author	= {J. Hoffmann and S. Edelkamp},
-  title		= {The Deterministic Part of {IPC}-4: {A}n Overview},
+  title		= {{The Deterministic Part of {IPC}-4: {A}n Overview}},
   journal	= {Journal of Artificial Intelligence Research},
   year		= {2005},
   volume	= {24},
@@ -171,8 +171,8 @@
 
 @Article{	  lama:jair2010,
   author	= {S. Richter and M. Westphal},
-  title		= {The {LAMA} Planner: {G}uiding Cost-Based Anytime Planning
-		  with Landmarks},
+  title		= {{The {LAMA} Planner: {G}uiding Cost-Based Anytime Planning
+		  with Landmarks}},
   journal	= {Journal of Artificial Intelligence Research},
   volume	= {39},
   year		= {2010},
@@ -181,8 +181,8 @@
 
 @article{ PRA-star,
   author    = {M. P. Evett and J. A. Hendler and A. Mahanti and D. S. Nau},
-  title     = {{PRA*}: {M}assively Parallel Heuristic Search},
-  journal   = {J. Parallel Distrib. Comput.},
+  title     = "{{PRA*}: {M}assively Parallel Heuristic Search}",
+  journal   = {Journal of Parallel and Distributed Computating},
   volume    = {25},
   number    = {2},
   year      = {1995},
@@ -191,25 +191,25 @@
 
 @inproceedings{TDS,
   author    = {J. W. Romein and A. Plaat and H. E. Bal and J. Schaeffer},
-  title     = {Transposition Table Driven Work Scheduling in Distributed Search},
-  booktitle = {Proc. of the 16th National Conference on Artificial Intelligence (AAAI-1999) },
+  title     = "{Transposition Table Driven Work Scheduling in Distributed Search}",
+  booktitle = {$16^{th}$ National Conference on Artificial Intelligence (AAAI-1999) },
   year      = {1999},
   pages     = {725-731},
 }
 
 @inproceedings{PFADDD,
   author    = {R. Niewiadomski and J. N. Amaral and R. C. Holte},
-  title     = {Sequential and Parallel Algorithms for Frontier {A}* with
-               Delayed Duplicate Detection},
-  booktitle = {Proc. of the 21st National Conference on Artificial Intelligence (AAAI-2006) },
+  title     = "{Sequential and Parallel Algorithms for Frontier {A}* with
+               Delayed Duplicate Detection}",
+  booktitle = {$21^{st}$ National Conference on Artificial Intelligence (AAAI-2006) },
   year      = {2006},
 }
 
 @inproceedings{ HDA-star,
   author	= {A. Kishimoto and A. S. Fukunaga and A. Botea},
-  title		= {Scalable, Parallel Best-First Search for Optimal
-		  Sequential Planning},
-  booktitle	= {Proc. of the 19th International Conference on Automated Planning and Scheduling (ICAPS-2009)},
+  title		= "{Scalable, Parallel Best-First Search for Optimal
+		  Sequential Planning}",
+  booktitle	= {$19^{th}$ International Conference on Automated Planning and Scheduling (ICAPS-2009)},
   year		= {2009},
   pages		= {10-17}
 }
@@ -217,10 +217,10 @@
 @InProceedings{	  dovetailing,
   author	= {R. Valenzano and N. Sturtevant and J. Schaeffer and K.
 		  Buro and A. Kishimoto},
-  title		= {Simultaneously Searching with Multiple Settings: {A}n
+  title		= "{Simultaneously Searching with Multiple Settings: {A}n
 		  Alternative to Parameter Tuning for Suboptimal Single-Agent
-		  Search Algorithms},
-  booktitle	= {Proc. ICAPS},
+		  Search Algorithms}",
+  booktitle	= {$20^{th}$ International Conference on Automated Planning and Scheduling (ICAPS-2010)},
   year		= {2010},
   pages		= {177-184}
 }
