--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -350,11 +350,11 @@ designing evolutionary algorithms for hard optimization problems, from
 continuous to combinatorial ones.
 
 An extension of EO for parallelization of algorithms, ParadisEO, has been
-proposed by Cahon et al. FIXME. It uses the Message Passing Interface API and
-proposes several parallelization scheme, available by calling wrappers around
-common functions of EO. We have choose not to use this framework because we
-were targeting multicore architecture, where message passing is useless and may
-introduce an overhead higher than other approaches. 
+proposed by Cahon et al. \cite{paradiseo:JHeuristics2004}. It uses the Message
+Passing Interface API and proposes several parallelization scheme, available by
+calling wrappers around common functions of EO. We have choose not to use this
+framework because we were targeting multicore architecture, where message
+passing is useless and may introduce an overhead higher than other approaches. 
 
 %\subparagraph{OpenMP and parallelization paradigms}\\
 
