Adding SVN revision number in the title

--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -5,9 +5,14 @@
 \parindent=0pt
 \parskip=\baselineskip
 
+% Please leave SVN version number $Revision$
+% Remember to enter the SVN command 
+%      svn propset svn:keywords "Revision" gecco11.tex
+
+
 \begin{document}
 \title{Instance-based Parameter Tuning\\
-for Evolutionary AI Planning}
+for Evolutionary AI Planning -- $Revision: 4461$}
 
 \numberofauthors{1}
 
