--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -11,6 +11,7 @@
 
 
 \begin{document}
+
 \title{Instance-based Parameter Tuning\\
 for Evolutionary AI Planning -- $Revision: 4461$}
 
@@ -39,9 +40,15 @@ for Evolutionary AI Planning -- $Revision: 4461$}
 \maketitle
 \begin{abstract}
 \noindent Learn-and-Optimize (LaO) is a generic surrogate-model based method for parameter tuning combining learning and optimizing. In this paper LaO is used to tune Divide-and-Evolve (DaE), an Evolutionary Algorithm for AI Planning. The LaO framework makes it possible to learn the relation between some features describing a given instance and the optimal parameters for this instance, thus making it possible to extrapolate this relation to unknown instances in the same domain, or even to instance in a new domain. Moreover, the learned model is already used as a surrogate-model to accelerate the search for the optimal parameters. It hence ebcomes possible to solve intra-domain and extra-domain tuning and generalization in a single framework. The proposed implementatin of LaO uses an Artificial Neural Network for learning the mapping between features and optimal parameters, and the Covariance Matrix Adaptation Evolution Strategy for optimization. Reuslts demonstrate that LaO is capable of improving the quality of the DaE results even with only a few iterations. THe main limitation of the DAE case-study is the limited amount of meaningful features that are available to describe the instances. However, the learned model reaches almost the same performance on the test instances, which means that it is capable of generalization, at least in a single-domain setting. 
+
 \end{abstract}
 
-\category{I.2.8}{Computing Methodologies}{Artificial Intelligence }{Problem Solving, Control Methods, and Search}
+\category{I.2.6}{Computing Methodologies}{Artificial Intelligence }{Learning} {Parameter learning}
+
+\terms{Theory}
+
+\keywords{parameter tuning, AI Planning, evolutionary algorithms} % NOT required for Proceedings
+
 
 
 \section{Introduction}
@@ -52,13 +59,11 @@ Being a general optimization problem, there might be as many parameter tuning al
 
 The one exception we are aware of is the work \cite{Hutter06} in the SAT domain, in which many relevant features have been gathered based on half a century of SAT-research, and hundreds of papers. Extensive parameter tuning on several thousands of instances has allowed the authors to learn a meaningful mapping between the features and running-time, using function regression. Optimizing this model makes it possible to choose the optimal parameters. This paper aims to generalize this work made in the SAT domain; we, however aim not to optimize running time, but fitness value. This difference alone is however not causing major problems. We design the aforementioned framework for any domain, and start with some experimenting. The machine learning techniques used will also be different.
 
-An AI planning task written in PDDL is specified by a domain, that defines the predicates and the actions; an instance, that instantiates the objects, and specifies the initial state and a list of goals to reach. A solution is a plan, or a sequence of actions, such that when applied to the initial state it leads the system into a state where all goal atoms are true. Hence, for a given domain, there can exist several instances sharing the same predicates and actions, but differing either by the number of objects, or the initial and goal states. 
-
 Unfortunately, until now, there has not existed any set of features for AI Planning problems in general that was sufficient to describe the characteristics of a planning task, like for the SAT domain \cite{Hutter06} mentioned above. In this paper however, we make an important step to the framework for parameter tuning applied generally for each domain in AI Planning with a preliminary set of features. Our Learn-and-Optimize (LaO) framework consists of the combination of optimizing (i.e. parameter tuning) and of learning the mapping between features and best parameters. We benefit from learning already in the optimization phase using the learned model similarly as in other surrogate-model based optimization techniques (see for example \cite{Bardenet} for a Gaussian-process-based approach).
 
-LaO can of course be applied to any target algorithm to be tuned, for example to tune Support Vector Machines applied for different porblem-instances. In this paper we are considering as a target our special, Evolutionary Algorithm (EA) based method, called Divide-and-Evolve (DaE), which is an EA applied to solve AI problems. We take DaE as it is, as a black-box algorithm and have not modified it in this paper. The same realization described in \cite{BibEvoCop:2010} is used. 
+LaO can of course be applied to any target algorithm to be tuned, for example to tune Support Vector Machines applied for different problem-instances. In this paper we are considering as a target a special, Evolutionary Algorithm (EA) based method, called Divide-and-Evolve (DaE), which is an EA applied to solve AI problems. We take DaE as it is, as a black-box algorithm and have not modified it in this paper. The same realization described in \cite{BibEvoCop:2010} is used. 
 
-The paper is organized as follows: AI Planning Problems and the basic YASHP Solver is briefly introduced in section \ref{section:planning}. Section \ref{section:dae} describes our intermediate, Divide-and-Evolve Method. Section \ref{section:LaO} describes our new, top level method: Learn-and-Optimize used for parameter tuning. Our resuts are presented in section \ref{section:results} and conclusions are drawn in section \ref{section:conclusions}. We end the paper in section \ref{section:futurework} with future work foreseeable.
+The paper is organized as follows: AI Planning Problems and the basic YASHP Solver is briefly introduced in section \ref{section:planning}. Section \ref{section:dae} describes the intermediate, Divide-and-Evolve Method. Section \ref{section:LaO} describes our new, top level method: Learn-and-Optimize used for parameter tuning. Our results are presented in section \ref{section:results} and conclusions are drawn in section \ref{section:conclusions}. We end the paper in section \ref{section:futurework} with future work foreseeable.
 
 \section{AI Planning Problems}
 \label{section:planning}
@@ -74,11 +79,11 @@ The initial state is complete, whereas the goal might be a partial state. An act
 A solution to a planning task is a consistent schedule of grounded actions whose execution in the initial state leads to a state that contains one goal state, i.e., where all atoms of the problem goal are true. A planning task defined on domain $D$ with initial state $I$ and goal $G$ will be denoted in the following as ${\cal P}_D(I,G)$.
 
 \section{Divide-and-Evolve}
+
 \label{section:dae}
 
-Divide-and-Evolve (DaE) is fully described in \cite{BibEvoCop:2010}, and no change has been made in the algorithm used in this paper. However, for the sake of parameter tuning, DaE will be considered here as a black-box. This Section nevertheless presents a shorter description of DaE.
-
 Early approaches to AI Planning using Evolutionary Algorithms directly handled possible solutions, i.e. possible plans: an individual is an ordered sequence of actions see \cite{Spector-AAAI-94,muslea97,westerberg:2000,westerberg:2001,Morignot-2005}. However, as it is often the case in Evolutionary Combinatorial optimization, those direct encoding approaches have limited performance in comparison to the traditional AI planning approaches, and hybridization with classical methods had been the way to success in many combinatorial domains, as witnessed by the fruitful emerging domain of memetic algorithms \cite{MemeticBook:2005}. Along those lines, though relying on an original ``memetization'' principle, a novel hybridization of Evolutionary Algorithms (EAs) with AI Planning, termed Divide-and-Evolve (DaE) has been proposed \cite{DAE:EvoCOP06,DAE:book-2007}. For a complete formal description, see \cite{Bibai:ICAPS2010}.
+
 
 The basic idea of DaE in order to solve a planning task ${\cal P}_D(I,G)$ is to find a sequence of states $S_1, \ldots, S_n$, and to use some embedded planner to solve the series of planning tasks ${\cal P}_D(S_{k},S_{k+1})$, for $k \in [0,n]$ (with the convention that $S_0 = I$ and $S_{n+1} = G$). The generation and optimization of the sequence of states $(S_i)$ is driven by an evolutionary algorithm. 
 
@@ -86,17 +91,9 @@ The fitness (quality criterion) of a list of partial states $S_1, \ldots,$ $S_n$
 
 A state is a list of atoms built over the set of predicates and the set of object instances. However, searching the space of complete states would result in a rapid explosion of the size of the search space. Moreover, goals of planning problem need only be to defined as partial states. It thus seems more practical to search only sequences of partial states, and to limit the choice of possible atoms used within such partial states. However, this raises the issue of the choice of the atoms to be used to represent individuals, among all possible atoms. The result of the previous experiments on different domains of temporal planning tasks from the IPC benchmark series \cite{BibEvoCop2009} demonstrates the need for a very careful choice of the atoms that are used to build the partial states. 
 
-The method used to build the partial states is based on an estimation of the earliest time from which an atom can become true. Such estimation can be obtained by any admissible heuristic function (e.g $h^1,h^2...$ \cite{HaslumGeffner-AIPS-2000}). The possible start times are then used in order to restrict the candidate atoms for each partial state. A partial state is built at a given time by randomly choosing among several atoms that are possibly true at this time. The sequence of states is then built by preserving the estimated chronology between atoms (time consistency). Heuristic function $h^1$ has been used for all experiments presented here.
-
-However, these restrictions may still contain a large number of atoms, and it might be possible to restrict further this list allowing only atoms that are built with a restricted set of predicates. Manual choice had been used in the early versions of DaE \cite{deterministic:IPC6}. However, it can be expected that such structural parameters can be learned by post-mortem analyzes of different runs of DaE on several problems of the same domain. 
-
-Nevertheless, even when restricted to specific choices of atoms, the random sampling can lead to inconsistent partial states, because some sets of atoms can be mutually exclusive\footnote{Several atoms are mutually exclusive when there exists no plan that, when applied to the initial state, yields a state containing them all.} (mutex in short). Whereas it could be possible to allow mutex atoms in the partial states generated by DaE, and to let evolution discard them, it seemed more efficient to try a priori to forbid them. In practice, it is not possible to decide if several atoms are mutex unless solving the complete problem. Nevertheless, binary mutexes can be approximated with a variation of the $h^2$ heuristic function \cite{HaslumGeffner-AIPS-2000} in order to build quasi pairwise-mutex-free states (i.e., states where no pair of atoms are mutex).
+The method used to build the partial states is based on an estimation of the earliest time from which an atom can become true. Such estimation can be obtained by any admissible heuristic function (e.g $h^1,h^2...$ \cite{HaslumGeffner-AIPS-2000}). The possible start times are then used in order to restrict the candidate atoms for each partial state. A partial state is built at a given time by randomly choosing among several atoms that are possibly true at this time. The sequence of states is then built by preserving the estimated chronology between atoms (time consistency).
 
 An individual in DaE is hence represented as a variable-length ordered time-consistent list of partial states, and each state is a variable-length list of atoms that are not pairwise mutex. Furthermore, all operators that manipulate the representation (see below) maintain the chronology between atoms and the local consistency of a state, i.e. avoid pairwise mutexes.
-
-The initialization phase and the variation operators of the DaE algorithm respectively build the initial sequences of states and randomly modify some sequences during its evolutionary run.
-
-The initialization of an individual is the following: first, the number of states is uniformly drawn between 1 and the number of estimated start times.  For every chosen time, the number of atoms per state is uniformly chosen between 1 and the number of atoms of the corresponding restriction. Atoms are then chosen one by one, uniformly in the allowed set of atoms, and added to the individual if not mutex with any other atom that is already there.
 
 One-point crossover is used, adapted to variable-length representation in that both crossover points are independently chosen, uniformly in both parents.
 
@@ -143,17 +140,9 @@ Our choice for supervised learning method was a multilayer Feed-Forward Artifici
 
 The only open decision is which optimizer to use for parameter tuning. Since we have several instances to run, we can only afford a simple optimizer, therefore simply a Covariance Matrix Adaptation Evolution Strategy was chosen, specifically, a (1+1)-CMA-ES (in short, CMA-ES, see \cite{hansen2001ecj}). We started CMA-ES with a known set of good default parameters, taken from \cite{BibGECCO:2010}.
 
-There is one element added to a conventional CMA-ES, and this is gene-transfer between instances. We have one (1+1)-CMA-ES running for each instance, because we can not afford to use a larger population for a single instance. However, the (1+1)-CMA-ES instances of all the instances form a set of individuals. Crossover between individuals is usually not used in ES, however, in our case the the set of individuals does not resemble to a population, but to a set of species. We have to assume that the optimum for the instances are different: they are in different "niche"-s of the parameter tuning "biosphere". However, we also may assume that a good chromosome of one instance may at least help another instance. Thus it may be used as a hint in the optimization. Therefore random gene-tranferer was used in our algorithm. When the Genetransferer is requested for a hint for one instance, it returns with uniform random distribution the so-far best parameter of a different instance. Naturally, the default parameters are not tried twice. There is another benefit from gene-transfer, it may smooth out the unambiguities between instances: we increase the probability for instances with the same features to test the same parameters, and thus the possibility to find out that the same parameters are appropriate for the same features.
+There is one element added to a conventional CMA-ES, and this is gene-transfer between instances. We have one (1+1)-CMA-ES running for each instance, because we can not afford to use a larger population for a single instance. However, the (1+1)-CMA-ES instances of all the instances form a set of individuals. Crossover between individuals is usually not used in ES, however, in our case the the set of individuals does not resemble to a population, but to a set of species. We have to assume that the optimum for the instances are different: they are in different "niche"-s of the parameter tuning "biosphere". However, we also may assume that a good chromosome of one instance may at least help another instance. Thus it may be used as a hint in the optimization. Therefore random Genetransferer was used in our algorithm. When the Genetransferer is requested for a hint for one instance, it returns with uniform random distribution the so-far best parameter of a different instance. Naturally, the default parameters are not tried twice. There is another benefit from gene-transfer, it may smooth out the unambiguities between instances: we increase the probability for instances with the same features to test the same parameters, and thus the possibility to find out that the same parameters are appropriate for the same features.
 
 Using the ANN and the Genetransferer as external hints in addition to the CMA-ES corrupts somewhat the later one. The CMA-ES shall be informed about these external hints, if they improve the fitness-function. These external hints are handled as if they were the hint of the CMA-ES algorithm, i.e. we request a hint from the CMA-ES and change it to be the value of the external hint as if by chance that was the hint of CMA-ES. This way corruption is minimized. The global step size is updated with true or false, depending on the improvement or lack of improvement, covariance matrix is updated only in the later case.
-
-There is one additional technical problem with CMA-ES, this is that each parameter is restricted to an interval. This seems reasonable and makes our algorithm more stable. The parameters are actually normalized linearly to the [0,1] interval. For the boundary problem we applied a simple version of the box constraint handling technique described in \cite{hansen2009tec}. Our penalty term was simply \begin{math}||x^{feas}-x|| \end{math}, where \begin{math}x^{feas}\end{math} is the closest value in the box. Moreover, only \begin{math}x^{feas}\end{math} was recorded as a feasible solution to pass to the ANN. Note that the Genetransferer and the ANN itself can not give hints outside of the box. In order to not to compromise too much CMA-ES several iterations of this were carried out for one hint of the ANN and one gene-transfer.
-
-Our realization of our LaO algorithm uses the Shark library (\cite{shark08}) for CMA-ES and the FANN library for ANN (\cite{nissen}). To evaluate each parameter-setting with each instance, we use a computer-cluster of LRI with approximately 60 computers, most of them have 4 cores, but some have 8. The cluster is used by many researchers, therefore our algorithm contains a scheduler to use the free capacity on this cluster.
-
-Since the parallel architecture used in our algorithm is somewhat heterogeneous, we can not rely on a fixed running time, which depends on the hardware. Therefore, for each evaluation the number of evaluations is fixed for DaE. Note that the number of YASHP evaluations is approximately proportional with running time, so that the execution time for a particular computer is also determined independently of the parameter-settings. For example, even if the size of the population is increased, with fixed number of evaluation the number of generations will be limited respectively resulting approximatively in the same running time for each parameter-settings. 
-
-Moreover, since DaE is not deterministic, we carried out 11 runs and took the median fitness-value as the result for that instance and that parameter-settings.
 
 \begin{table*}[ht]
 \centering
@@ -164,7 +153,6 @@ Name & numiter & size of training & size of test &  ANN-error & Q in LAO & Q of 
 Freecell& 16 & 108 & 230 & 0.1 & 1.09 & 1.05 & 1.04  \\
 Grid & 10 & 55 & 124 & 0.09 & 1.09 & 1.05 & 1.03  \\
 Mprime & 8 & 64 & 152 & 0.08 & 1.11 & 1.05 & 1.04   \\
-Sokoban & 8 & 32 & 52 & 0.11 & 	 &  &   \\
 \hline
 \end{tabular}
 \caption{Domains: note that only the actually usable training instances are shown. numiter=number of LaO iterations. Size of train specifies the number of train instances. ANN-error is given as MSE, returned by FANN. Q=quality-improvement ratio. "In Lao" means best found parameter-set in LaO.}
@@ -180,7 +168,6 @@ Name & \ default parameters & \ CMA-ES &  Genetrasnferer & ANN \\
 Freecell & 0/0.09& 0.64/0.66  & 0.18/0.08  & 0.18/0.17     \\
 Grid & 0.02/0.24 & 0.66/0.6  & 0.16/0.11 & 0.17/0.05  &    \\
 Mprime &  0.02/0.45& 0.59/0.36 & 0.2/0.11  & 0.18/0.08  &    \\
-Sokoban & 0.01/0.03 & 0.69/0.61   & 0.2/0.32  & 0.1/0.03  &    \\
 \hline
 \end{tabular}
 \caption{Best results according to source of hint. Each cell shows ratios. The first number shows the ratio the corresponding source contributed to the best result if tie-breaks are taken into account, the second number shows the same, if only the first best parameter-set is taken into account.}
@@ -213,10 +200,19 @@ Number of offsprings& 100& 2000& 700 \\
 \label{table:parameters}
 \end{table*} 
 
+
+There is one additional technical problem with CMA-ES, this is that each parameter is restricted to an interval. This seems reasonable and makes our algorithm more stable. The parameters are actually normalized linearly to the [0,1] interval. For the boundary problem we applied a simple version of the box constraint handling technique described in \cite{hansen2009tec}. Our penalty term was simply \begin{math}||x^{feas}-x|| \end{math}, where \begin{math}x^{feas}\end{math} is the closest value in the box. Moreover, only \begin{math}x^{feas}\end{math} was recorded as a feasible solution to pass to the ANN. Note that the Genetransferer and the ANN itself can not give hints outside of the box. In order to not to compromise too much CMA-ES several iterations of this were carried out for one hint of the ANN and one gene-transfer.
+
+Our realization of our LaO algorithm uses the Shark library (\cite{shark08}) for CMA-ES and the FANN library for ANN (\cite{nissen}). To evaluate each parameter-setting with each instance, we use a computer-cluster with approximately 60 computers, most of them have 4 cores, but some have 8. The cluster is used by many researchers, therefore our algorithm contains a scheduler to use the free capacity on this cluster.
+
+Since the parallel architecture used in our algorithm is somewhat heterogeneous, we can not rely on a fixed running time, which depends on the hardware. Therefore, for each evaluation the number of evaluations is fixed for DaE. Note that the number of YASHP evaluations is approximately proportional with running time, so that the execution time for a particular computer is also determined independently of the parameter-settings. For example, even if the size of the population is increased, with fixed number of evaluation the number of generations will be limited respectively resulting approximatively in the same running time for each parameter-settings. 
+
+Moreover, since DaE is not deterministic, we carried out 11 runs and took the median fitness-value as the result for that instance and that parameter-settings.
+
 \section{Results}
 \label{section:results}
 
-In the Planning and Learning Part of IPC2011 (IPC), there were 5 sample domains pre-published, with a corresponding problem-generator for each domain. The 5 domains are Ferry, Freecell, Grid, Mprime, and Sokoban. We excluded Ferry from this paper, since there were not enough number of instances to learn a mapping. For the remaining 4 domains we generated approximately 100 instances for each one, since this seemed to be appropriate for a running time of 2-3 weeks. The description of the track fixes running time as 15 minutes. Since we use number of YASHP evaluations as a terminating criterion 11 runs were carried out for each instance on our own, dedicated server to measure the median of number of evaluations with our default parameters. The median of 11 runs were taken and used as a termination criterion for each instance in the train set on any computer. For many instances we did not have any result in 15 minutes, those we had to drop. The remaining instances were used for training. 
+In the Planning and Learning Part of IPC2011 (IPC), there were 5 sample domains pre-published, with a corresponding problem-generator for each domain. The 5 domains are Ferry, Freecell, Grid, Mprime, and Sokoban. We excluded Ferry and Sokoban from this paper, since there were not enough number of instances to learn a mapping. For the remaining 4 domains we generated approximately 100 instances for each one, since this seemed to be appropriate for a running time of 2-3 weeks. The description of the track fixes running time as 15 minutes. Since we use number of YASHP evaluations as a terminating criterion 11 runs were carried out for each instance on our own, dedicated server to measure the median of number of evaluations with our default parameters. The median of 11 runs were taken and used as a termination criterion for each instance in the train set on any computer. For many instances we did not have any result in 15 minutes, those we had to drop. The remaining instances were used for training. 
 
 
 Table \ref{table:domains} shows the data for each domain, as you can see from the approximately 100 instances from each domain we could use all of the training instances (108) only in the domain Freecell. In the other domains we got much less usable instances. The Mean Square Error (MSE) of the retrained ANN is shown for each domain. Note that since there can be multiple optimal parameters for the same instance (fitness-function is discrete), there might be an unavoidable error of the ANN.
@@ -237,20 +233,20 @@ Table \ref{table:domains} shows our results. We present several quality-improvem
 
 On the other hand, the ANN model generalizes excellently to the the independent test-set. Quality-improvement ratios dropped only by 0.01, i.e. the knowledge incorporated in the ANN was transferable to the test cases and usable almost to the same extent as for the train set.
 
-Our results are quite similar for each domain. Even the size of the training set seems not to be so crucial. For example for Freecell all the instances (108 out of 108 generated) could be used, because they were not so hard. On the other hand, only few Sokoban instances (32 out of 99 generated) could be used. However, both performed well. The explanation for this may be that both the 32 and 108 instances covered well the whole range of solvable instances.
+Our results are quite similar for each domain. Even the size of the training set seems not to be so crucial. For example for Freecell all the instances (108 out of 108 generated) could be used, because they were not so hard. On the other hand, only few  Grid instances (55 out of 107 generated) could be used. However, both performed well. The explanation for this may be that both the 32 and 108 instances covered well the whole range of solvable instances.
 
 \section{Conclusions}
 \label{section:conclusions}
 
 Our method presented in this paper is a surrogate-model based combined learner and optimizer for parameter tuning. We demonstrated that our algorithm is capable of improving the quality of the DaE algorithm considerably even with only a few iterations. An appropriate number of iterations, like 1000 shall be carried out to demonstrate the capability of the algorithm. We also demonstrated that some of this quality-improvement can be incorporated into an ANN-model, which is also able to generalize excellently to an independent test-set.
 
-Naturally, our algorithm also has some parameters, which can be tuned again. Parameter tuning in this respect is similar to the question of the final parameters of an ultimate theory of the Universe: one can always try to reduce one theory to another with possibly less parameters. But the infinite regress can not be stopped: there will always be some ultimate constants. Similarly, the parameters of any algorithm can be tuned by another algorithm and that may improve the results. But there is no ultimate algorithm. The bad news here is that the computing capacity needed is exploding. Good news is that in each step in the hierarchy an improvement can be made, moreover, the possible improvements become smaller and smaller, thus practically we can stop at some point. 
+Naturally, our algorithm also has some parameters, which can be tuned again. The parameters of any algorithm can be tuned by another algorithm and that may improve the results, but there is no ultimate algorithm. The bad news here is that the computing capacity needed is exploding. Good news is that in each step in the hierarchy an improvement can be made, moreover, the possible improvements become smaller and smaller, thus practically we can stop at some point. 
 
 
 \section{Future Work}
 \label{section:futurework}	
 
-The most important experiment to carry out in the future is simply to test the algorithm with more iterations and more domains this takes several month of work even using a cluster. Since LaO is only a framework, as indicated other kind of learning methods, and other kind of optimization techniques may be incorporated. If an ANN is used, the optimal structure has to be determined, or a more sophisticated solution is to apply one of the so-called Growing Neural Network architectures \cite{Qiang}.
+The most important experiment to carry out in the future is simply to test the algorithm with more iterations and more domains this takes several month of work even using a cluster. Since LaO is only a framework, as indicated other kind of learning methods, and other kind of optimization techniques may be incorporated. If an ANN is used, the optimal structure has to be determined, or a more sophisticated solution is to apply one of the so-called Growing Neural Network architectures.
 
 Also the benefit of gene-transfer and/or cross-over might be investigated further. Gene-transfer shall be improved so that chromosomes are transfered deterministically in order of similarity of instances measured by similarity of features.
 
@@ -260,6 +256,7 @@ One shall also test, how inter-domain generalization works. Maybe it is possible
 \section{Acknowledgements}
 This work is funded through French ANR project DESCARWIN ANR-09-COSI-002.
 % \section{Restrictions on Further Use}
+
 
 \bibliographystyle{abbrv}
 \bibliography{gecco2011brendelschoenauer}
